--- a/index.html
+++ b/index.html
@@ -5,6 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <script type="module" src="script.js"></script>
   </head>
-  <body></body>
+
+  <!--
+    todo application: 
+    1. place to write todo
+    - HTML FORM
+    2. a button that sends todo to javascript.
+    - Event listener
+    3. a funciton to process the todo
+    - DOM manipulation
+    4. a list to return the prosessed todo
+    - DOM manipulation that connects step 1-3 
+  -->
+  <body>
+    
+    <header></header>
+    <main>
+      <form>
+        <label for="taskInput">
+          write a todo
+          <input type="text" name="taskInput" id="taskInput">
+        </label>
+     
+      <button id="taskButton">Add todo</button>
+    </form>
+
+      <ul id="taskList">
+        <!--placeholder-->
+        <li>draw a page</li>
+      </ul>
+    </main>
+
+    <footer></footer>
+  </body>
 </html>
