--- a/index.html
+++ b/index.html
@@ -24,19 +24,22 @@
   <body>
 
     <header></header>
-    <main>
-      <form>
+    <main class="main">
+      <form class="form">
         <label for="taskInput">
           write a todo
-          <input type="text" name="taskInput" id="taskInput">
+          <input type="text" 
+          name="taskInput" 
+          id="taskInput" class="taskInput">
         </label>
      
-      <button id="taskButton">Add todo</button>
+      <button id="taskButton" class="taskButton">Add todo</button>
     </form>
 
-      <ul id="taskList">
+      <ul id="taskList"
+      class="taskList">
         <!--placeholder-->
-        <li>draw a page</li>
+        <li class="taskListItem">draw a page</li>
       </ul>
     </main>
 
