--- a/index.html
+++ b/index.html
@@ -26,12 +26,15 @@
     <header></header>
     <main class="main">
       <form class="form">
+        <div class="inputLabel">
         <label for="taskInput">
           write a todo
+        </label>
+
           <input type="text" 
           name="taskInput" 
           id="taskInput" class="taskInput">
-        </label>
+      </div>
      
       <button id="taskButton" class="taskButton">Add todo</button>
     </form>
